--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="section">
             <h1><span>About Me</span></h1>
-            <p> Hey there! I'm Sankalp. Welcome to my portfolio! I am a Software Engineer by passion and a Guitarist by heart. Do checkout my guitar covers at my Youtube channel <a href="https://www.youtube.com/c/SankalpSaxena">@SankalpSaxena</a></p>
+            <p> Hey there! I'm Sandip. Welcome to my portfolio! I am a Cloud Migration Engineer. </a></p>
         </div>
         <div class="section" id="res">
             <h1><span>My Works</span></h1>
@@ -21,7 +21,7 @@
             
                 
             </a>
-            <a href="https://github.com/sankalp7654">
+            <a href="https://github.com/SandipPatilGithub">
                 <img src="https://img.icons8.com/nolan/144/github.png"/>
                 <div class="caption">Github Account</div>
             </a>
@@ -40,7 +40,7 @@
                 <div class="caption">Python</div>
             </a>
             <a href="https://www.linux.org/">
-                <img src="https://img.icons8.com/dusk/144/000000/ linux.png"/>
+                <img src="https://img.icons8.com/dusk/144/000000/linux.png"/>
                 <div class="caption">Linux</div>
             </a>
             <a href="https://ubuntu.com">
