--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id="header" class="section">
-  <img alt="logo" class="img-circle" src="avatar.jpg">         				
+  <img alt="logo" class="img-circle" src="Sandip.jpg">         				
             <p>SANDIP PATIL</p>
         </div>
         <div class="section">
