--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                 <img src="https://img.icons8.com/nolan/144/python.png"/>
                 <div class="caption">Python</div>
             </a>
-            <a href="https://www.linux.org/">
-                <img src="https://img.icons8.com/dusk/144/000000/linux.png"/>
-                <div class="caption">Linux</div>
+            <a href="https://www.redhat.com/">
+                <img src="https://www.clipartmax.com/png/small/274-2747539_red-hat-red-hat-enterprise-linux-logo.png"/>
+                <div class="caption">Redhat</div>
             </a>
             <a href="https://ubuntu.com">
                 <img src="https://img.icons8.com/color/144/000000/ubuntu--v1.png"/>
