--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="caption">Python</div>
             </a>
             <a href="https://www.redhat.com/">
-                <img src="https://www.clipartmax.com/png/small/274-2747539_red-hat-red-hat-enterprise-linux-logo.png"/ height=80px width=80px>
+                <img src="https://www.clipartmax.com/png/small/274-2747539_red-hat-red-hat-enterprise-linux-logo.png"/ height=100px width=100px align=auto>
                 <div class="caption">Redhat</div>
             </a>
             <a href="https://ubuntu.com">
