--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="caption">Python</div>
             </a>
             <a href="https://www.redhat.com/">
-                <img src="https://www.clipartmax.com/png/small/274-2747539_red-hat-red-hat-enterprise-linux-logo.png"/ align=auto>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/d/d8/Red_Hat_logo.svg>
                 <div class="caption">Redhat</div>
             </a>
             <a href="https://ubuntu.com">
