--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                 <img src="https://img.icons8.com/nolan/144/python.png"/>
                 <div class="caption">Python</div>
             </a>
-            <a href="https://www.redhat.com/">
+        <!---    <a href="https://www.redhat.com/">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/d/d8/Red_Hat_logo.svg>
                 <div class="caption">Redhat</div>
-            </a>
+            </a> --->
             <a href="https://ubuntu.com">
                 <img src="https://img.icons8.com/color/144/000000/ubuntu--v1.png"/>
                 <div class="caption">Ubuntu</div>
